--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![](https://i.imgur.com/xG74tOh.png)",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon servidor.js"
+    "dev": "node servidor.js"
   },
   "keywords": [],
   "author": "",
